--- a/2022/12/makefile
+++ b/2022/12/makefile
@@ -1,8 +1,23 @@
-# shell or sample makefile for fpc
-# see https://bytes.usc.edu/cs104/wiki/makefile/ for a quick reference
+# fpc makefile for advent of code
+# -O3 will sometimes throw "variable does not appear to be
+# initialized" even when the code is OK. I haven't determined the
+# pattern.
 
-solution: solution.pas
-	fpc -glw3 -Ciort -ap -Sgix -Sh- -vewnlb -Fi../../common/ solution
+COMPILER=fpc
+OPTIONS=-glw3 -Ciort -ap -Sgix -Sh- -vewnlb
+ROPTIONS=-g- -ap -Sgix -Sh- -O3 -vewnlb
+INCLUDES=-Fi../../common/
+UNITS=
+COMPILE=$(COMPILER) $(OPTIONS) $(INCLUDES) $(UNITS)
+RCOMPILE=$(COMPILER) $(ROPTIONS) $(INCLUDES) $(UNITS)
+
+all: program
+
+program: solution.pas
+	$(COMPILE) solution
+
+release:
+	$(RCOMPILE) solution
 
 run:
 	./solution ../../../datasets/2022/12/dataset.txt >output.txt
@@ -10,5 +25,6 @@ run:
 test:
 	./solution ../../../datasets/2022/12/testone.txt >testing.txt
 
+# Delete the build directory and program
 clean:
-	rm -f solution *.o output.txt testing.txt
+	rm -rf solution aoc-log *.o
