--- a/2023/05/makefile
+++ b/2023/05/makefile
@@ -1,21 +1,28 @@
-# shell or sample makefile for fpc
+# shell or sample makefile for gfortran
 # see https://bytes.usc.edu/cs104/wiki/makefile/ for a quick reference
+# attempting to do the include paths cleanly
+ROOTDIR=$(HOME)
+PROJDIR=$(ROOTDIR)/projects/aoc/solutions
+COMPILER=gfortran
+OPTIONS=-Wall -fcheck=all
+INCDIR=$(PROJDIR)/commonf90
+MODDIR=$(PROJDIR)/commonf90
+DATDIR=$(ROOTDIR)/projects/aoc/datasets
+INCLUDES=-I$(INCDIR)
+MODULES=-J$(MODDIR)
+COMPILE=$(COMPILER) -c $(OPTIONS) $(INCLUDES) $(MODULES)
+COMPLINK=$(COMPILER) $(OPTIONS) $(INCLUDES) $(MODULES) $(MODDIR)/*.o
 
-solution: solutionone.pas solutiontwo.pas
-	fpc -glw3 -Ciort -ap -Sgix -Sh- -vewnlb -Fi../../common/ solutionone
-	fpc -glw3 -Ciort -ap -Sgix -Sh- -vewnlb -Fi../../common/ solutiontwo
+default:
 
-release:
-	fpc -g- -ap -Sgix -Sh- -O3 -vewnlb -Fi../../common/ solutionone
-	fpc -g- -ap -Sgix -Sh- -O2 -vewnlb -Fi../../common/ solutiontwo
-
-run:
-	./solutionone ../../../datasets/2023/05/dataset.txt >output.txt
-	./solutiontwo ../../../datasets/2023/05/dataset.txt >>output.txt
+build: solution.f90
+	$(COMPLINK) solution.f90 -o solution
 
 test:
-	./solutionone ../../../datasets/2023/05/testone.txt >testing.txt
-	./solutiontwo ../../../datasets/2023/05/testone.txt >testing.txt
+	./solution $(DATDIR)/2023/05/testone.txt
+
+run:
+	./solution $(DATDIR)/2023/05/dataset.txt
 
 clean:
-	rm -f solutionone solutiontwo *.o output.txt testing.txt
+	rm -rf *.mod *.o
