--- a/2022/16/makefile
+++ b/2022/16/makefile
@@ -1,17 +1,18 @@
 # shell or sample makefile for gfortran
 # see https://bytes.usc.edu/cs104/wiki/makefile/ for a quick reference
 # attempting to do the include paths cleanly
-ROOTDIR=$(HOME)
-PROJDIR=$(ROOTDIR)/projects/aoc/solutions
+
+ROOTDIR=$(HOME)/projects/aoc
+PROJDIR=$(ROOTDIR)/solutions
 COMPILER=gfortran
-OPTIONS=-Wall -fcheck=all
+OPTIONS=-Wall -fcheck=all -Wno-uninitialized
 INCDIR=$(PROJDIR)/commonf90
 MODDIR=$(PROJDIR)/commonf90
-DATDIR=$(ROOTDIR)/projects/aoc/datasets
+DATDIR=$(ROOTDIR)/datasets
 INCLUDES=-I$(INCDIR)
 MODULES=-J$(MODDIR)
-COMPILE=$(COMPILER) -c $(OPTIONS) $(INCLUDES) $(MODULES)
-COMPLINK=$(COMPILER) $(OPTIONS) $(INCLUDES) $(MODULES) $(MODDIR)/*.o
+COMPILE=$(COMPILER) -g -c $(OPTIONS) $(INCLUDES) $(MODULES)
+COMPLINK=$(COMPILER) -g $(OPTIONS) $(INCLUDES) $(MODULES) $(MODDIR)/*.o
 
 default:
 
