got results but there's a memory walker somewhere, checkin wip and find it

--- a/2015/07/makefile
+++ b/2015/07/makefile
@@ -18,15 +18,15 @@ DATADIR=$(HOME)/projects/aoc/datasets/$(YEAR)/$(MONTH)
 
 
 # compiler and linker:
-CC=clang
-CFLAGS=-Wall -g3 -std=c99
-LDFLAGS=-lm
+CC=gcc
+CFLAGS=-Wall -g3 -O0 -std=c99
+# LDFLAGS=-lm
 
 
 # i don't really use these but for the sake of documentation:
-SRCS = driver.c solution.c unittest.c
-HDRS = solution.h
-OBJS = driver.o solution.o unittest.o
+SRCS=driver.c solution.c unittest.c
+HDRS=solution.h
+OBJS=driver.o solution.o unittest.o
 
 
 # the targets you should ask for
@@ -59,7 +59,7 @@ unittest.o: unittest.c solution.h solution.c
 
 
 unittest: unittest.o solution.o
-	$(CC) $(CFLAGS) -o unittest unittest.o solution.o -lm
+	$(CC) $(CFLAGS) -o unittest unittest.o solution.o
 
 
 # run unit tests
@@ -73,7 +73,7 @@ driver.o: driver.c
 
 
 driver: driver.o solution.o
-	$(CC) $(CFLAGS) -o driver driver.o solution.o -lm
+	$(CC) $(CFLAGS) -o driver driver.o solution.o
 
 
 # run against test data
