second param of calloc is length not fill value

--- a/2015/07/makefile
+++ b/2015/07/makefile
@@ -19,6 +19,7 @@ DATADIR=$(HOME)/projects/aoc/datasets/$(YEAR)/$(MONTH)
 
 # compiler and linker:
 CC=gcc
+# CFLAGS=-fsanitize=address -Wall -g3 -O0 -std=c99
 CFLAGS=-Wall -g3 -O0 -std=c99
 # LDFLAGS=-lm
 
