--- a/2016/11/makefile
+++ b/2016/11/makefile
@@ -13,14 +13,15 @@
 
 # where to find test data:
 YEAR=2016
-MONTH=XX
+MONTH=11
 DATADIR=$(HOME)/projects/aoc/datasets/$(YEAR)/$(MONTH)
 
 
 # compiler and linker:
 CC=clang
 # CFLAGS=-Wall -g3 -std=c99
-CFLAGS=-fsanitize=address -Wall -g3 -O0 -std=c99
+# CFLAGS=-fsanitize=address -Wall -g3 -O0 -std=c99
+CFLAGS=-Wall -O2 -std=c99
 # LDFLAGS=-lm
 LDFLAGS=
 
