--- a/2016/14/Makefile
+++ b/2016/14/Makefile
@@ -5,8 +5,8 @@ MONTH=14
 DATADIR=$(HOME)/projects/aoc/datasets/$(YEAR)/$(MONTH)
 
 CC=clang
-# CFLAGS=-Wall -O3 -std=c99
-CFLAGS=-fsanitize=address -Wall -g3 -O0 -std=c99
+CFLAGS=-Wall -O3 -std=c99
+# CFLAGS=-fsanitize=address -Wall -g3 -O0 -std=c99
 # LDFLAGS=-lm
 LDFLAGS=
 
@@ -60,4 +60,4 @@ short:
 	./driver $(DATADIR)/testone.txt
 
 long:
-	./driver $(DATADIR)/dataset.txt
+	./driver ahsbgdzn
