retrofit updated libs

--- a/2015/01/Makefile
+++ b/2015/01/Makefile
@@ -4,7 +4,7 @@ YEAR=2015
 MONTH=01
 
 CC=clang
-CFLAGS=-Wall -g3 -std=c99
+CFLAGS=-Wall -g3 -std=c18 --pedantic-errors
 
 SRCS = solution.c
 OBJS = solution.o
