--- a/2016/24/Makefile
+++ b/2016/24/Makefile
@@ -5,8 +5,8 @@ MONTH=24
 DATADIR=$(HOME)/projects/aoc/datasets/$(YEAR)/$(MONTH)
 
 CC=clang
-# CFLAGS=-Wall -O3 -std=c99
-CFLAGS=-fsanitize=address -Wall -g3 -O0 -std=c99
+# CFLAGS=-Wall -O3 -std=c18 --pedantic-errors
+CFLAGS=-fsanitize=address -Wall -g3 -O0 -std=c18 --pedantic-errors
 # LDFLAGS=-lm
 LDFLAGS=
 
@@ -48,7 +48,7 @@ unittest: unittest.o solution.o
 	$(CC) $(CFLAGS) -o unittest unittest.o solution.o -lm
 
 test:
-	./unittest
+	./unittest unitdata.txt
 
 driver.o: driver.c
 	$(CC) $(CFLAGS) -c driver.c
